--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "electron-is": "^3.0.0",
     "element-ui": "^2.15.1",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
@@ -96,9 +97,11 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.32",
     "karma-webpack": "^3.0.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "0.4.0",
     "mocha": "^5.2.0",
     "multispinner": "^0.2.1",
+    "node-fetch": "^2.6.1",
     "node-loader": "^0.6.0",
     "node-sass": "^4.9.2",
     "require-dir": "^1.0.0",
@@ -110,10 +113,12 @@
     "vue-loader": "^15.2.4",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
+    "vuex-electron": "^1.0.3",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.1.3",
+    "ws": "^7.4.4"
   }
 }
