--- a/extra/linux/engine/aria2.conf
+++ b/extra/linux/engine/aria2.conf
@@ -1,5 +1,5 @@
 ###############################
-# Motrix Linux Aria2 config file
+# GLD Linux Aria2 config file
 #
 # @see https://aria2.github.io/manual/en/html/aria2c.html
 #
