--- a/extra/win32/engine/aria2.conf
+++ b/extra/win32/engine/aria2.conf
@@ -1,5 +1,5 @@
 ###############################
-# Motrix Windows Aria2 config file
+# GLD Windows Aria2 config file
 #
 # @see https://aria2.github.io/manual/en/html/aria2c.html
 #
@@ -13,6 +13,8 @@ enable-rpc=true
 rpc-allow-origin-all=true
 # Listen incoming JSON-RPC/XML-RPC requests on all network interfaces.
 rpc-listen-all=true
+#RPC端口, 仅当默认端口被占用时修改
+rpc-listen-port=6800
 
 
 ################ File system ################
