--- a/extra/darwin/engine/aria2.conf
+++ b/extra/darwin/engine/aria2.conf
@@ -1,5 +1,5 @@
 ###############################
-# Motrix macOS Aria2 config file
+# GLD macOS Aria2 config file
 #
 # @see https://aria2.github.io/manual/en/html/aria2c.html
 #
