#3 下载开发完成

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "npm run unit && npm run e2e",
     "unit": "karma start test/unit/karma.conf.js",
     "postinstall": "",
-    "dist": "build"
+    "dist": "electron-builder --win --x64"
   },
   "build": {
     "productName": "gldownload",
@@ -141,8 +141,8 @@
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^2.0.4",
-    "electron-builder": "^20.19.2",
+    "electron": "^2.0.18",
+    "electron-builder": "^22.10.5",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
     "file-loader": "^1.1.11",
